# hw_dcmi

./: .gitignore  Cargo.toml  README.md  README_CN.md  build.rs
.cargo/: config.toml
crates/hw_dcmi/: Cargo.toml
crates/hw_dcmi/src/: device.rs  enums.rs  error.rs  lib.rs  macros.rs  structs.rs
crates/hw_dcmi/src/test/: mod.rs
crates/hw_dcmi_sys/: Cargo.toml  build.rs
crates/hw_dcmi_sys/src/: bindings.rs  bindings_dyn.rs  lib.rs
src/: hw_dcmi_sys.rs  lib.rs
