[package]
name = "hw_dcmi"
version = "0.1.0"
authors = ["ZhuLegend"]
description = "A safe and ergonomic Rust wrapper for the Huawei DCMI API."
readme = "../../README.md"
documentation = "https://docs.rs/hw_dcmi_sys"
repository = "https://github.com/ZhuLegend/hw_dcmi"
license = "MIT OR Apache-2.0"
edition = "2021"

keywords = ["huawei", "gpu", "managment", "monitoring", "hardware"]
categories = ["api-bindings", "hardware-support"]

[features]
load_dynamic = ["hw_dcmi_sys/load_dynamic", "dep:libloading"]
serde = ["dep:serde", "dep:serde_derive"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

libloading = { workspace = true, optional = true }

static_assertions = "1.1.0"

hw_dcmi_sys = { version = "0.1.0", path = "../hw_dcmi_sys" }
