[package]
name = "hw_dcmi_sys"
version = "0.1.0"
authors = ["ZhuLegend"]
description = "A safe and ergonomic Rust wrapper for the Huawei DCMI API."
readme = "../../README.md"
documentation = "https://docs.rs/hw_dcmi"
repository = "https://github.com/ZhuLegend/hw_dcmi"
license = "MIT OR Apache-2.0"
edition = "2021"

keywords = ["huawei", "gpu", "managment", "monitoring", "hardware"]
categories = ["api-bindings", "hardware-support"]

[dependencies]
libloading = { workspace = true, optional = true }

[build-dependencies]
bindgen = "0.70.1"

[features]
load_dynamic = ["dep:libloading"]